{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 17,
  "lineage": "4c4f060b-af68-fa6c-e72a-b307a8f53768",
  "resources": [
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2f71c1c12ec2313",
            "domain": "vpc",
            "id": "eipalloc-0b2f71c1c12ec2313",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-220-111-171.compute-1.amazonaws.com",
            "public_ip": "3.220.111.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.dev-vpc.aws_internet_gateway.ig",
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892358249656:internet-gateway/igw-05f2126599025264d",
            "id": "igw-05f2126599025264d",
            "owner_id": "892358249656",
            "tags": {
              "Env": "development",
              "Name": "dev-vpc-igw"
            },
            "tags_all": {
              "Env": "development",
              "Name": "dev-vpc-igw"
            },
            "vpc_id": "vpc-04a0fbcffe9a2c471"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2f71c1c12ec2313",
            "connectivity_type": "public",
            "id": "nat-0930495163e3f2b46",
            "network_interface_id": "eni-0c730dfebffad81c9",
            "private_ip": "10.10.0.112",
            "public_ip": "3.220.111.171",
            "subnet_id": "subnet-09145b55b79cd4933",
            "tags": {
              "Env": "development",
              "Name": "dev-vpc-nat"
            },
            "tags_all": {
              "Env": "development",
              "Name": "dev-vpc-nat"
            }
          },
          "dependencies": [
            "module.dev-vpc.aws_eip.nat_eip",
            "module.dev-vpc.aws_internet_gateway.ig",
            "module.dev-vpc.aws_subnet.public",
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-042564231f74b78da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0930495163e3f2b46",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-042564231f74b78da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc.aws_eip.nat_eip",
            "module.dev-vpc.aws_internet_gateway.ig",
            "module.dev-vpc.aws_nat_gateway.nat",
            "module.dev-vpc.aws_route_table.private",
            "module.dev-vpc.aws_subnet.public",
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05f2126599025264d",
            "id": "r-rtb-0e7dc1ffbb890c7aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e7dc1ffbb890c7aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc.aws_internet_gateway.ig",
            "module.dev-vpc.aws_route_table.public",
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892358249656:route-table/rtb-042564231f74b78da",
            "id": "rtb-042564231f74b78da",
            "owner_id": "892358249656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "dev-vpc-private-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a0fbcffe9a2c471"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892358249656:route-table/rtb-0e7dc1ffbb890c7aa",
            "id": "rtb-0e7dc1ffbb890c7aa",
            "owner_id": "892358249656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "dev-vpc-public-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "dev-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a0fbcffe9a2c471"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081ee6bd8a7ad6d45",
            "route_table_id": "rtb-042564231f74b78da",
            "subnet_id": "subnet-0cc77e3fbcb3baf83"
          },
          "dependencies": [
            "module.dev-vpc.aws_route_table.private",
            "module.dev-vpc.aws_subnet.private",
            "module.dev-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a70fd4d624ea0e38",
            "route_table_id": "rtb-042564231f74b78da",
            "subnet_id": "subnet-017259f9d603cd39a"
          },
          "dependencies": [
            "module.dev-vpc.aws_route_table.private",
            "module.dev-vpc.aws_subnet.private",
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030549f755cda1286",
            "route_table_id": "rtb-0e7dc1ffbb890c7aa",
            "subnet_id": "subnet-09145b55b79cd4933"
          },
          "dependencies": [
            "module.dev-vpc.aws_route_table.public",
            "module.dev-vpc.aws_subnet.public",
            "module.dev-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039f4f408b1fa923f",
            "route_table_id": "rtb-0e7dc1ffbb890c7aa",
            "subnet_id": "subnet-02873bec7111ab7bd"
          },
          "dependencies": [
            "module.dev-vpc.aws_route_table.public",
            "module.dev-vpc.aws_subnet.public",
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892358249656:subnet/subnet-0cc77e3fbcb3baf83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc77e3fbcb3baf83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "892358249656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "development",
              "Name": "development-us-east-1a-private"
            },
            "tags_all": {
              "Env": "development",
              "Name": "development-us-east-1a-private"
            },
            "vpc_id": "vpc-04a0fbcffe9a2c471"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892358249656:subnet/subnet-017259f9d603cd39a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017259f9d603cd39a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "892358249656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "development",
              "Name": "development-us-east-1b-private"
            },
            "tags_all": {
              "Env": "development",
              "Name": "development-us-east-1b-private"
            },
            "vpc_id": "vpc-04a0fbcffe9a2c471"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892358249656:subnet/subnet-09145b55b79cd4933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09145b55b79cd4933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "892358249656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "development",
              "Name": "development-us-east-1a-public"
            },
            "tags_all": {
              "Env": "development",
              "Name": "development-us-east-1a-public"
            },
            "vpc_id": "vpc-04a0fbcffe9a2c471"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892358249656:subnet/subnet-02873bec7111ab7bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02873bec7111ab7bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "892358249656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "development",
              "Name": "development-us-east-1b-public"
            },
            "tags_all": {
              "Env": "development",
              "Name": "development-us-east-1b-public"
            },
            "vpc_id": "vpc-04a0fbcffe9a2c471"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.dev-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892358249656:vpc/vpc-04a0fbcffe9a2c471",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-041126da37a89e67d",
            "default_route_table_id": "rtb-09af44b9128d68b18",
            "default_security_group_id": "sg-0977434db11efff57",
            "dhcp_options_id": "dopt-e3496d99",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04a0fbcffe9a2c471",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09af44b9128d68b18",
            "owner_id": "892358249656",
            "tags": {
              "Env": "development",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Env": "development",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}